# Flask-direct-sqlalchemy

./: .gitignore  Pipfile  run-myflaskapp.sh
dbmodels/: setup.cfg
dbmodels/mymodels/: author.py  base.py
flaskapp/: setup.cfg  wsgi.py
flaskapp/myflaskapp/: app.db  myflaskapp.py
flaskapp/myflaskapp/app/: __init__.py  routes.py
flaskapp/myflaskapp/app/templates/: authors.html
scripts/: create_database.py
