[metadata]
name = mymodels
version = 0.0.1.dev0
description = "Database models"
author = Françoise Conil
author_email = fcodvpt@gmail.com
url = 
license = BSD
keywords = 
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Database :: Front-Ends
    Topic :: Scientific/Engineering

[options]
install_requires = 
    SQLAlchemy
